--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <span class="bg-clip-text text-transparent bg-gradient-to-r from-primary to-secondary">Roger Infa Sánchez</span>
                 </h1>
                 <h2 class="text-2xl md:text-3xl text-gray-300 mb-6 font-medium">
-                    Ingeniero de Software <span class="text-primary">•</span> Full Stack Developer <span class="text-primary">•</span> Soluciones Tecnológicas
+                    Desarrollador de Software <span class="text-primary">•</span> Full Stack Developer <span class="text-primary">•</span> Soluciones Tecnológicas
                 </h2>
                 <p class="text-lg md:text-xl mb-8 max-w-2xl mx-auto leading-relaxed">
                     Transformando ideas en <span class="text-primary font-medium">soluciones digitales</span> con código limpio y arquitecturas escalables.
